# DFT-FEM

./: .gitignore
Generalized Poisson Eqn/: CMakeLists.txt  energy_convergence.csv  plot.py  poisson_101.cpp  poisson_102.cpp  poisson_102_parallel.cpp
Generalized Poisson Eqn/convergence_identity/: energy_convergence.csv
Generalized Poisson Eqn/convergence_jacobi/: energy_convergence.csv
Generalized Poisson Eqn/convergence_parallel/: 3_energy_convergence.csv  4_energy_convergence.csv  plot.py
Poisson_101/: CMakeLists.txt  poisson_3d.cpp
src/: CMakeLists.txt  main.cpp  run_benchmarks.sh  test.cpp
src/numerics/: matrix_free_poisson_solver.cpp  matrix_free_poisson_solver.h  matrix_poisson_solver.cpp  matrix_poisson_solver.h  poisson_solver_base.h
src/physics/: atom.h  atom_system.cpp  atom_system.h  nuclear_charge_density.cpp  nuclear_charge_density.h
